fix: aligning title, etc

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,6 @@ body {
 
 header {
   display: flex;
-  padding: 0 15%;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
@@ -22,11 +21,12 @@ header {
 }
 
 header h1{
+  margin-left: 215px;
   font-family: 'Inter', sans-serif;
   font-weight: bold;
-  font-size: 200%;
-  letter-spacing: 5px;
-  color: #FFF;
+  font-size: 150%;
+  letter-spacing: 25px;
+  color: rgba(101, 24, 180, 1);
 }
 
 .logo {
@@ -46,6 +46,7 @@ nav ul {
 }
 
 nav li {
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -201,6 +202,7 @@ a {
 
 #slider-container {
   height: 425px;
+  width: 100%;
   padding-top: 25px;
   background-color: #1b1b1b;
   border-bottom: 2px solid #272727;
